# bv-rag

./: .dockerignore  .env.example  .gitignore  BV-RAG_最终执行方案_Railway版.md  BV-RAG_验船师审核_5题测试结果_v3.md  Dockerfile  pyproject.toml  railway.toml
api/: jwt_utils.py  main.py
chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js  sidepanel.html  sidepanel.js
chunker/: chunk_stats.py  pdf_chunker.py  regulation_chunker.py
config/: bv_rules_urls.py  settings.py  solas_regulation_mapping.py
crawler/: bv_rules_crawler.py  iacs_crawler.py  run_crawler.py  spider.py
data/: structured_tables.json
db/: auth.py  bm25_search.py  graph_queries.py  postgres.py  schema.sql
docs/: TECHNICAL_DOCUMENTATION.md
evaluation/: run_eval.py  test_queries.json
generation/: extension_prompts.py  generator.py  missing_tables_logger.py  post_process.py  prompts.py  table_post_check.py
improvement/: BV-RAG_工业级改进方案_验船师反馈.md  BV-RAG_数据扩展_MemRL_Rerank_完整实施方案.md  T103_T104_技术分析与修复方案.md  badcase-260222-improvement-plan.md  bv-rag-v2-plan-final.md  full-table-ingestion-plan.md
knowledge/: defect_kb.py  practical_knowledge.py
memory/: conversation_memory.py
parser/: html_parser.py  iacs_pdf_parser.py  pdf_parser.py  quality_check.py
pipeline/: ingest.py  ingest_external.py  voice_qa_pipeline.py
retrieval/: clarification_checker.py  hybrid_retriever.py  query_classifier.py  query_enhancer.py  query_router.py  reranker.py  utility_reranker.py  vector_store.py
scripts/: backfill_regulation_paths.py  build_defect_kb.py  crawl.sh  diagnose_chunk_identity.py  (+18 more)
(+30 files in other folders)
